--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h2 class="heading">Explore our modern studio facilities, and discover what we can do for you...</h2>            
         </div>
         <div class="container-fluid p-0">
-            <div class="owl-carousel owl-theme galleryCarousel">
+            <div class="owl-carousel owl-theme galleryCarousel" id="myCarousel">
                 <div class="item">
                     <img src="assets/img/gallery-image-01.jpg">
                 </div>
@@ -259,6 +259,7 @@
                     <img src="assets/img/gallery-image-12.jpg">
                 </div>
             </div>
+            <div class="num" id='num'></div>
         </div>
     </section>
 
@@ -269,15 +270,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.js"></script>
     <script>
-        $('.owl-carousel').owlCarousel({
+        $('.galleryCarousel').owlCarousel({
                 loop: true,
                 stagePadding: 400,
                 margin:100,
                 nav: true,
-                autoplay: false,
-                autoplayTimeout: 5000,
-                autoplayHoverPause: false,                
-                center: true,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                autoplayHoverPause: false,
                 responsive: {
                     0: {
                         items: 1,
@@ -293,6 +293,40 @@
                     }
                 }
             })
+    </script>
+
+    <script>
+    //    $('.owl-carousel').on('changed.owl.carousel', function (e) {
+    //         if (!e.namespace || e.property.name != 'position') return
+    //         $('#num').text(e.item.index-5 + '/' + e.item.count)
+    //     })
+
+    $('.owl-carousel').on('initialized.owl.carousel changed.owl.carousel resized.owl.carousel', function (e) {
+            owl_carousel_page_numbers(e);
+        });
+
+
+        function owl_carousel_page_numbers(e) {
+
+            //if (!e.namespace || e.property.name != 'position') return;
+            //console.log('work');
+            var items_per_page = e.page.size;
+
+            if (items_per_page > 1) {
+
+                var min_item_index = e.item.index,
+                    max_item_index = min_item_index + items_per_page,
+                    display_text = (min_item_index + 1) + '-' + max_item_index;
+
+            } else {
+
+                var display_text = (e.item.index + 1);
+
+            }
+
+            $('#num').text(display_text-6 + '/' + e.item.count);
+
+        }
     </script>
 </body>
 
